added hook to deploy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,10 +25,5 @@ jobs:
         env:  # Add the CI variable specifically for this step 
           CI: false   
 
-      - name: Deploy to Netlify
-        uses: netlify/actions/cli@master  
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }} 
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}  
-        with:
-          args: deploy --dir=build --prod 
+      - name: Trigger Netlify Build
+        run: curl -X POST -d '{}' https://api.netlify.com/build_hooks/6612247851a9b46d7e97f457
